Bug 91001 - Cannot increase font size
Summary: Cannot increase font size
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.4.2 release
Hardware: Other All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.1.0 target:5.0.0.1 target:4.4.5
Keywords: bibisected, bisected, regression
: 93659 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-01 18:41 UTC by Andras Timar
Modified: 2016-10-25 19:21 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc (ODP) (13.40 KB, application/vnd.oasis.opendocument.presentation)
2015-05-01 18:41 UTC, Andras Timar
Details
first patch (1.30 KB, patch)
2015-06-14 21:03 UTC, Maxim Monastirsky
Details
second patch (2.79 KB, patch)
2015-06-14 21:06 UTC, Maxim Monastirsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2015-05-01 18:41:15 UTC
Created attachment 115246 [details]
bugdoc (ODP)

Step to reproduce:
1. select all text in the textbox with Ctrl-A
2. try to increase the font size with toolbar/sidebar button

It flickers and then refuses to. Deleting the last empty bullet point helps. Detected in LibreOffice 4.2, but present in current master, too.
Comment 1 tommy27 2015-05-01 19:52:31 UTC
tested under Win8x64 using LibO 4.4.1.2 and 5.0.0.0.alpha1+ (x64)
Build ID: 967b8c33225ae2aab5733639f0713a84cb1971da
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-04-25_04:11:40
Locale: it_IT

I don't reproduce that issue.

are you seeing it under Windows, Linux or Mac?
Comment 2 Andras Timar 2015-05-01 20:12:01 UTC
Initially I tested only on Linux, but now I can confirm it on Mac (my own build), and on WIndows: Version: 5.0.0.0.alpha1+
Build ID: 0ecf20cd185813327613c01bc6cbff9721cef1f1
TinderBox: Win-x86@42, Branch:master, Time: 2015-05-01_06:49:32
Locale: hu-HU (hu_HU)

See my screencast: https://youtu.be/Y_sW_LEsYnI
Comment 3 raal 2015-05-02 05:54:15 UTC
I can confirm with Version: 5.0.0.0.alpha1+
Build ID: 59adad74084e9281887e3f78a225794f37b784d7
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-04-29_12:40:39

works OK in LibreOffice 3.5.0 
Build ID: d6cde02, regression
Comment 4 Matthew Francis 2015-05-04 07:59:49 UTC
This seems to have begun at the below commit.

Adding Cc: to navin.patidar@gmail.com; Any chance you could take a look at this one? Thanks


commit 5b32d9c4406a68507ac9737ee0ada8bd1d424815
Author: navin patidar <patidar@kacst.edu.sa>
Date:   Wed Feb 27 08:25:45 2013 +0300

    fix fdo#61492: update sd:View with FONTHEIGHT attribute changes.
    
    update sd:View with FONTHEIGHT attribute changes, so that
    it can position bullet and text properly.
    
    Change-Id: Ibf8c6423e64d194c2711d9c37b58de31f1c4c2dd
Comment 5 Maxim Monastirsky 2015-06-14 21:02:17 UTC
(In reply to Matthew Francis from comment #4)
> commit 5b32d9c4406a68507ac9737ee0ada8bd1d424815
> Author: navin patidar <patidar@kacst.edu.sa>
> Date:   Wed Feb 27 08:25:45 2013 +0300
> 
>     fix fdo#61492: update sd:View with FONTHEIGHT attribute changes.
>     
>     update sd:View with FONTHEIGHT attribute changes, so that
>     it can position bullet and text properly.
This approach seems a bit strange to me, because it sets the same text attributes for a second time, just to properly position the bullet in the preview mode (to be clear - the attributes that passed to sd::View are also forwarded to EditView\EditEngine at some point). Also the assumption that you can simply copy attributes to a new SfxItemSet and feed the View with it, doesn't seem to work as soon as the selected text has several font sizes (that's another regression from this commit), or when it has an empty bullet item like in this bug. The flickering mentioned in the bug description, is most probably because it sets the new (correct) size, but then immediately reverts it by the second attributes setting I mentioned above.

Up to this stage, I managed to get 2 different working patches, and I'm not sure which one is better (or maybe both approaches are wrong)?
Comment 6 Maxim Monastirsky 2015-06-14 21:03:51 UTC
Created attachment 116532 [details]
first patch

Retains the same approach as we have now, but feeds the View directly with aSet. (Not sure why it works.)
Comment 7 Maxim Monastirsky 2015-06-14 21:06:49 UTC
Created attachment 116533 [details]
second patch

This one doesn't do the double attributes setting (which means less useless undo steps are created), while still seems to keep reasonable results for Bug 61492.
Comment 8 Commit Notification 2015-06-15 20:32:21 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a05cb81d363cce181d3e31967cea2cfff1bd06d

tdf#91001 Fix inc/dec font for complex selections

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2015-06-16 13:24:38 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7f04fe1bba2c91055a90174bb85d7b2edf830dee&h=libreoffice-5-0

tdf#91001 Fix inc/dec font for complex selections

It will be available in 5.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2015-06-17 13:10:56 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=653792218dbb7bb1bbf415c880f104dcf7fee5f9&h=libreoffice-4-4

tdf#91001 Fix inc/dec font for complex selections

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Maxim Monastirsky 2015-08-25 16:57:11 UTC
*** Bug 93659 has been marked as a duplicate of this bug. ***
Comment 12 Robinson Tryon (qubit) 2015-12-17 09:00:31 UTC Comment hidden (obsolete)